Fixes
* Category info texts
* Search bar appears above hamburger menu container
* A tag link animation

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -313,22 +313,23 @@ a {
   }
 }
 
-a::before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: $brand-color-2;
-  transform: scaleX(0);
-  transition: transform 0.3s ease;
-}
+// CLICKABLE LINK UNDERLINE ANIMATION 
+// a::before {
+//   content: "";
+//   position: absolute;
+//   display: block;
+//   width: 100%;
+//   height: 2px;
+//   bottom: 0;
+//   left: 0;
+//   background-color: $brand-color-2;
+//   transform: scaleX(0);
+//   transition: transform 0.3s ease;
+// }
 
-a:hover::before {
-  transform: scaleX(1);
-}
+// a:hover::before {
+//   transform: scaleX(1);
+// }
 
 /////////////////////////////////////////////////
 
@@ -461,7 +462,7 @@ form#contact-form {
   border-radius: 30px;
   padding: 0 30px;
   outline: none;
-  z-index: 2;
+  z-index: 0;
 }
 
 #list {
